# ChangeLog for app-misc/gentoo
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/gentoo/ChangeLog,v 1.108 2012/01/31 19:42:27 ssuominen Exp $

  31 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -gentoo-0.15.6.ebuild,
  -gentoo-0.19.10.ebuild:
  old

  31 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> gentoo-0.19.12.ebuild:
  ppc/ppc64 stable wrt #396435

  15 Jan 2012; Raúl Porcel <armin76@gentoo.org> gentoo-0.19.12.ebuild:
  alpha/ia64/sparc stable wrt #396435

  04 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> gentoo-0.19.12.ebuild:
  x86 stable wrt bug #396435

  30 Dec 2011; Jeroen Roovers <jer@gentoo.org> gentoo-0.19.12.ebuild:
  Stable for HPPA (bug #396435).

  29 Dec 2011; Agostino Sarubbo <ago@gentoo.org> gentoo-0.19.12.ebuild:
  Stable for AMD64, wrt bug #396435

  29 Dec 2011; Jeroen Roovers <jer@gentoo.org> gentoo-0.15.6.ebuild,
  -gentoo-0.19.9.ebuild:
  Remove old.

  07 Nov 2011; Brent Baude <ranger@gentoo.org> gentoo-0.19.10.ebuild:
  Marking gentoo-0.19.10 ppc for bug 386639

  23 Oct 2011; Raúl Porcel <armin76@gentoo.org> gentoo-0.19.10.ebuild:
  alpha/ia64/sparc stable wrt #386639

  15 Oct 2011; Jeroen Roovers <jer@gentoo.org> gentoo-0.19.10.ebuild:
  Stable for HPPA (bug #386639).

  14 Oct 2011; Steve Dibb <beandog@gentoo.org> gentoo-0.19.10.ebuild:
  amd64 stable, bug 386639

  13 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> gentoo-0.19.10.ebuild:
  x86 stable wrt bug #386639

  13 Oct 2011; Jeroen Roovers <jer@gentoo.org> gentoo-0.19.10.ebuild,
  gentoo-0.19.12.ebuild:
  Respect CFLAGS thanks to ago (bug #386639).

*gentoo-0.19.12 (10 Oct 2011)

  10 Oct 2011; Jeroen Roovers <jer@gentoo.org> +gentoo-0.19.12.ebuild:
  Version bump thanks to Mikael Grahn (bug #381013).

*gentoo-0.19.10 (17 Jun 2011)

  17 Jun 2011; Jeroen Roovers <jer@gentoo.org> +gentoo-0.19.10.ebuild:
  Version bump.

  02 May 2011; Kevin McCarthy <signals@gentoo.org> gentoo-0.19.9.ebuild: