@@ -2,17 +2,15 @@
 Hash: SHA1
 
 DIST gentoo-0.19.12.tar.gz 1538940 RMD160 c63d8fae26b37dfca52686e0848ef27a1d9a9725 SHA1 fd98fa39c977175ca015c79659a7ef817ed26dfd SHA256 a19489210752c3e230c70a43d673a9b3479b06153909aefbe91469b08c5798e0
+DIST gentoo-0.19.13.tar.gz 1541738 RMD160 73cbedc7c34299fd87c16f7286ef46bdfc385417 SHA1 7f5a514bb446a7b14868254dad2e4f121fc8639e SHA256 6afafeacd54a18d97e217ad10df1b555274ac856f050e10888109d405ebdc092
 EBUILD gentoo-0.19.12.ebuild 1308 RMD160 ba2b65cd0ea04054723383821856012cd1c6abef SHA1 f7eb754ecd1de498911b08f25e8e7359ec3f453f SHA256 f17739c3873e47d6878630822aef8b7c9329882e7dd4625e2cf16db6c717b09f
-MISC ChangeLog 15448 RMD160 6e7d698afbbdf87fd5aba77ea9577529c49cd765 SHA1 b9e487a92b5cd4d135661e0bf83cc1ffa8d165d9 SHA256 a845afd1a0a0a05e36fffa5fde132ca0bc008660eb965cd6b60fe256fa98916a
+EBUILD gentoo-0.19.13.ebuild 1289 RMD160 e724bb10c6319b45c610cbd0a79fda167670c2d4 SHA1 cf609652fdeee5a8829ac48b34dcac092911739d SHA256 a9125e774330c14535c2395c1bf02854721d748fe1fb0b6ff91fdbdc906a8186
+MISC ChangeLog 15561 RMD160 995dd1ca6ad418c9545811cec686cf39a9813922 SHA1 d29ad9f0ea35c2ed131a5e1d7279895f2aca7c98 SHA256 f7555fbe0cc7d77daf7f4626eaa6251aa094a845089068263c3487d29da40002
 MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPKEOMAAoJEEdUh39IaPFNB4kIAIOBS8USYVWmm/K7Cz5Hmiex
-Uv9PqYT0Iadyx0hhqhcogeBy53gP79+mhmWekaukXXdjtEqSCv4HQqhlsaWgeuGY
-DQMI1XCI6Bnza4QwabqWC88v1e8l9YN8Ri+VRK7GSAQ1BAJFL5/XHiWP99FiUp/n
-ZOP91Hq3r5BYX/yw/KY65+RkxsLzD+gOJ9wInWE5rXNZ9bYEy3mukTcIJHQry2oj
-zckTGcL2LgsfbaXOkvZI/tEiinrRNM1kNhURqjkSVXrAzsTtL7K7M4f6i0M3wePv
-CqC4zOJF5/0Xlf4kn/aavtQFDa9wgbIQnt5CtWQom2WG3tNgD0xF+lY+Enr9N7g=
-=K8bu
+iEYEARECAAYFAk9zMWsACgkQVWmRsqeSphPAhgCfRjps2N3wUMcuFCsw1+elIPG+
+7CAAn2PBTWdvh2hMqPqBgiV2eDALUFej
+=xKbC
 -----END PGP SIGNATURE-----
