@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/gentoo
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gentoo/ChangeLog,v 1.108 2012/01/31 19:42:27 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/gentoo/ChangeLog,v 1.109 2012/03/28 15:42:29 jer Exp $
+
+*gentoo-0.19.13 (28 Mar 2012)
+
+  28 Mar 2012; Jeroen Roovers <jer@gentoo.org> +gentoo-0.19.13.ebuild:
+  Version bump.
 
   31 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -gentoo-0.15.6.ebuild,
   -gentoo-0.19.10.ebuild:
